--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@ img {
 .h1 {
   color: var(--base);
 }
+
+
     /*
       misc styles, nothing to do with CSS variables
     */
@@ -57,8 +59,19 @@ img {
       width: 100px;
     }
   </style>
-
   <script>
+
+  const inputs = document.querySelectorAll('.controls input');
+
+  function handleUpdate() {
+    console.log(this.value);
+  }
+
+inputs.forEach(input => input.addEventListener('change', handleUpdate));
+inputs.forEach(input => input.addEventListener('mousemove', handleUpdate));
+
+
+
   </script>
 
 </body>
