--- a/index.html
+++ b/index.html
@@ -65,8 +65,7 @@ img {
 
   function handleUpdate() {
     const suffix = this.dataset.sizing || '';
-    console.log(suffix);
-
+    document.documentElement.style.setProperty(`--${this.name}`, this.value + suffix)
   }
 
 inputs.forEach(input => input.addEventListener('change', handleUpdate));
